Changed to last/first name(singaporean style), editing .cls education section, wanting to add some vertical margin.

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -51,22 +51,22 @@
 %	PERSONAL INFORMATION
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
-\name{Claud D.}{Park}
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
+\name{Liang}{Zhang}
+%\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
+\address{05-258D, UTown Residence South Tower, 38 College Ave E, Singapore, 183601}
 
-\mobile{(+82) 10-9030-1843} 
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{(+65) 8153 9033} 
+\email{zliang@comp.nus.edu.sg}
+%\homepage{www.posquit0.com}
+%\github{posquit0}
+%\linkedin{posquit0}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
 % \skype{skype-id}
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
 
-\quote{``Must be the change that you want to see in the world."}
+%\quote{``Must be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -79,7 +79,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Curriculum Vitae}
+  {Zhang Liang~~~·~~~Curriculum Vitae}
   {\thepage}
 
 
