--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -11,15 +11,25 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - PRESENT} % Date(s)
+    {B.Eng in Computer Science and Technology} % Degree
+    {HIT(Harbin Institute of Techonology)} % Institution
+    {Harbin, China} % Location
+    {Sept. 2012 - July 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {GPA: 91.55/100~~~|~~~Ranking: 4/203}
       \end{cvitems}
+    }\\
+    
+    \cventry
+    {Ph.D in Computer Science} % Degree
+    {NUS(National University of Singapore)} % Institution
+    {Singapore} % Location
+    {Aug. 2016 - PRESENT} % Date(s)
+    {
+      %\begin{cvitems} % Description(s) bullet points
+       % \item {GPA: 91.55/100~~~|~~~Ranking: 4/203}
+      %\end{cvitems}
     }
-
 %---------------------------------------------------------
 \end{cventries}
